--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "bootstrap": "^5.1.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
+    "env-cmd": "^10.1.0",
     "express": "^4.18.0",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
@@ -43,5 +45,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "resolutions": {
+    "//": "See https://github.com/facebook/create-react-app/issues/11773",
+    "react-error-overlay": "6.0.9"
   }
 }
